configuraciones de urls parametrizables desde archivo .yaml

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -60,4 +60,6 @@ dependencies {
     implementation 'org.bytedeco.javacpp-presets:ffmpeg:4.0.2-1.4.3:android-x86'
     implementation 'org.bytedeco.javacpp-presets:opencv:3.4.3-1.4.3:android-arm'
     implementation 'org.bytedeco.javacpp-presets:ffmpeg:4.0.2-1.4.3:android-arm'
+
+    implementation 'org.yaml:snakeyaml:1.23'
 }
