--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -120,8 +120,15 @@
             </intent-filter>
         </receiver>
 
-        <service
-            android:name=".service.CheckPeriodicalService"></service>
+        <service android:name=".service.CheckPeriodicalService" />
+
+        <receiver
+            android:name=".receiver.ChargeCycleCounterBroadcastReceicver">
+            <intent-filter>
+                <action android:name="android.intent.action.ACTION_POWER_CONNECTED" />
+                <action android:name="android.intent.action.ACTION_POWER_DISCONNECTED" />
+            </intent-filter>
+        </receiver>
     </application>
 
 </manifest>
