--Se incluye generación de ciclos de Bateria

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -122,6 +122,14 @@
 
         <service
             android:name=".service.CheckPeriodicalService"></service>
+
+        <receiver
+            android:name=".receiver.ChargeCycleCounterBroadcastReceicver">
+            <intent-filter>
+                <action android:name="android.intent.action.ACTION_POWER_CONNECTED" />
+                <action android:name="android.intent.action.ACTION_POWER_DISCONNECTED" />
+            </intent-filter>
+        </receiver>
     </application>
 
 </manifest>
